src/objects/General_Product__c.object
<CustomObject>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>ErrorCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMsg__c</fullName>
        <label>ErrorMsg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Marketing_Name__c</fullName>
        <label>Internal Marketing Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Localized_Product_Description__c</fullName>
        <label>Localized Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufactured_Date__c</fullName>
        <label>Manufactured Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <label>Plant Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Commercial_Name__c</fullName>
        <label>Product Commercial Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoHS_Code__c</fullName>
        <label>RoHS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Date__c</fullName>
        <label>Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Manufacture_BOM__c</fullName>
        <label>Total Manufacture BOM</label>
        <summaryForeignKey>Product_Unit__c.General_Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>General Product</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>